--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -1,8 +1,15 @@
 
-btn.logIn = Anmelden
+btn.createQuery      = Abfrage erstellen
+btn.expandOntology   = Ontologie erweitern
+btn.logIn            = Anmelden
+btn.logout           = abmelden
+btn.newProtocol      = Protokoll erfassen
+btn.protocolOverview = Protokoll anschauen
+btn.settings         = Einstellungen
 
-lbl.password = Passwort
-lbl.username = Benutzername
+lbl.loggedInAs = Eingeloggt als
+lbl.password   = Passwort
+lbl.username   = Benutzername
 
 my.goodbye  = Hejd?
 my.hello    = Hejsan
