--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -1,8 +1,15 @@
 
-btn.logIn = Log in
+btn.createQuery      = Create query
+btn.expandOntology   = Expand Ontology
+btn.logIn            = Log in
+btn.logout           = logout
+btn.newProtocol      = Enter protocol
+btn.protocolOverview = Protocol overview
+btn.settings         = Settings
 
-lbl.password = password
-lbl.username = Username
+lbl.loggedInAs = Logged in as
+lbl.password   = password
+lbl.username   = Username
 
 my.goodbye  = Bye
 my.hello    = Hello
