Internationalization of PatientData View

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -7,9 +7,21 @@ btn.newProtocol      = Protokoll erfassen
 btn.protocolOverview = Protokoll anschauen
 btn.settings         = Einstellungen
 
-lbl.loggedInAs = Eingeloggt als
-lbl.password   = Passwort
-lbl.username   = Benutzername
+lbl.FID           = FID
+lbl.ISISDevice    = ISIS-Ger\u00E4t
+lbl.PID           = PID
+lbl.assistant     = Assistent
+lbl.dateOfBirth   = Geburtsdatum
+lbl.dateOfSurgery = Operationsdatum
+lbl.diagnosis     = Diagnose
+lbl.firstName     = Vorname
+lbl.loggedInAs    = Eingeloggt als
+lbl.nr            = Nr.
+lbl.password      = Passwort
+lbl.surgeon       = Operateur
+lbl.surgery       = Operation
+lbl.surname       = Nachname
+lbl.username      = Benutzername
 
 my.goodbye  = Hejd?
 my.hello    = Hejsan
