--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -1,15 +1,27 @@
 
 btn.createQuery      = Create query
-btn.expandOntology   = Expand Ontology
+btn.expandOntology   = Expand ontology
 btn.logIn            = Log in
 btn.logout           = logout
 btn.newProtocol      = Enter protocol
 btn.protocolOverview = Protocol overview
 btn.settings         = Settings
 
-lbl.loggedInAs = Logged in as
-lbl.password   = password
-lbl.username   = Username
+lbl.FID           = FID
+lbl.ISISDevice    = ISIS-device
+lbl.PID           = PID
+lbl.assistant     = Assistant
+lbl.dateOfBirth   = Date of birth
+lbl.dateOfSurgery = Date of surgery
+lbl.diagnosis     = Diagnosis
+lbl.firstName     = First name
+lbl.loggedInAs    = Logged in as
+lbl.nr            = Nr.
+lbl.password      = password
+lbl.surgeon       = Surgeon
+lbl.surgery       = Surgery
+lbl.surname       = Surname
+lbl.username      = Username
 
 my.goodbye  = Bye
 my.hello    = Hello
