--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -1,11 +1,9 @@
 
+LogInError.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unserem System.
+
 btn.logIn = Anmelden
 
 lbl.password = Passwort
 lbl.username = Benutzername
-
-my.goodbye  = Hejd?
-my.hello    = Hejsan
-my.question = Pratar du engelska?
 
 start.titel = IOMDO
