--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -1,11 +1,9 @@
 
+LogInError.wrongCredentials = Your credentials do not correspond to any account in our system.
+
 btn.logIn = Log in
 
 lbl.password = password
 lbl.username = Username
-
-my.goodbye  = Bye
-my.hello    = Hello
-my.question = Do you speak English?
 
 start.titel = IOMDO
