Neuer User hinzufügbar

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -1,6 +1,5 @@
 
-LogInError.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unserem System.
-
+btn.cancel           = Abbrechen
 btn.createQuery      = Abfrage erstellen
 btn.expandOntology   = Ontologie erweitern
 btn.logIn            = Anmelden
@@ -8,9 +7,19 @@ btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
 btn.protocolOverview = Protokoll anschauen
 btn.settings         = Einstellungen
+btn.signUp           = Regristrieren
+
+confirmationMsg.userCreated = Benutzer erfolgreich erstellt.
+
+errorMsg.emptyFileds      = Bitte alle Felder ausf\u00FCllen.
+errorMsg.usernameExists   = Benutzername existiert bereits.
+errorMsg.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unserem System.
+
+hl.createNewAccount = Neuer Benutzer
 
 lbl.FID           = FID
 lbl.ISISDevice    = ISIS-Ger\u00E4t
+lbl.LogIn         = Anmelden
 lbl.PID           = PID
 lbl.assistant     = Assistent
 lbl.dateOfBirth   = Geburtsdatum
@@ -20,6 +29,7 @@ lbl.firstName     = Vorname
 lbl.loggedInAs    = Eingeloggt als
 lbl.nr            = Nr.
 lbl.password      = Passwort
+lbl.signUp        = Regristrieren
 lbl.surgeon       = Operateur
 lbl.surgery       = Operation
 lbl.surname       = Nachname
