--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -1,6 +1,5 @@
 
-LogInError.wrongCredentials = Your credentials do not correspond to any account in our system.
-
+btn.cancel           = Cancel
 btn.createQuery      = Create query
 btn.expandOntology   = Expand ontology
 btn.logIn            = Log in
@@ -8,9 +7,19 @@ btn.logout           = logout
 btn.newProtocol      = Enter protocol
 btn.protocolOverview = Protocol overview
 btn.settings         = Settings
+btn.signUp           = Sign Up
+
+confirmationMsg.userCreated = User created successfully.
+
+errorMsg.emptyFileds      = Please fill in all fields.
+errorMsg.usernameExists   = User name already exists. 
+errorMsg.wrongCredentials = Your credentials do not correspond to any account in our system.
+
+hl.createNewAccount = Create new User
 
 lbl.FID           = FID
 lbl.ISISDevice    = ISIS-device
+lbl.LogIn         = Log in
 lbl.PID           = PID
 lbl.assistant     = Assistant
 lbl.dateOfBirth   = Date of birth
@@ -19,7 +28,8 @@ lbl.diagnosis     = Diagnosis
 lbl.firstName     = First name
 lbl.loggedInAs    = Logged in as
 lbl.nr            = Nr.
-lbl.password      = password
+lbl.password      = Password
+lbl.signUp        = Sign up
 lbl.surgeon       = Surgeon
 lbl.surgery       = Surgery
 lbl.surname       = Surname
