added internationalization for button "weiter"

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -5,6 +5,7 @@ btn.expandOntology   = Expand ontology
 btn.logIn            = Log in
 btn.logout           = logout
 btn.newProtocol      = Enter protocol
+btn.next             = Next
 btn.protocolOverview = Protocol overview
 btn.settings         = Settings
 btn.signUp           = Sign Up
