--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -7,6 +7,7 @@ btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
 btn.next             = Weiter
 btn.protocolOverview = Protokoll anschauen
+btn.search           = Suchen
 btn.settings         = Einstellungen
 btn.signUp           = Regristrieren
 
@@ -23,6 +24,7 @@ lbl.ISISDevice    = ISIS-Ger\u00E4t
 lbl.LogIn         = Anmelden
 lbl.PID           = PID
 lbl.assistant     = Assistent
+lbl.caseNr        = Fallnr.
 lbl.dateOfBirth   = Geburtsdatum
 lbl.dateOfSurgery = Operationsdatum
 lbl.diagnosis     = Diagnose
@@ -30,6 +32,7 @@ lbl.firstName     = Vorname
 lbl.loggedInAs    = Eingeloggt als
 lbl.nr            = Nr.
 lbl.password      = Passwort
+lbl.search        = Suche
 lbl.signUp        = Regristrieren
 lbl.surgeon       = Operateur
 lbl.surgery       = Operation
