--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -7,6 +7,7 @@ btn.logout           = logout
 btn.newProtocol      = Enter protocol
 btn.next             = Next
 btn.protocolOverview = Protocol overview
+btn.search           = search
 btn.settings         = Settings
 btn.signUp           = Sign Up
 
@@ -23,6 +24,7 @@ lbl.ISISDevice    = ISIS-device
 lbl.LogIn         = Log in
 lbl.PID           = PID
 lbl.assistant     = Assistant
+lbl.caseNr        = Casenr.
 lbl.dateOfBirth   = Date of birth
 lbl.dateOfSurgery = Date of surgery
 lbl.diagnosis     = Diagnosis
@@ -30,6 +32,7 @@ lbl.firstName     = First name
 lbl.loggedInAs    = Logged in as
 lbl.nr            = Nr.
 lbl.password      = Password
+lbl.search        = Search
 lbl.signUp        = Sign up
 lbl.surgeon       = Surgeon
 lbl.surgery       = Surgery
