Protocol Overview, Properties Update

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -25,9 +25,12 @@ lbl.LogIn         = Log in
 lbl.PID           = PID
 lbl.assistant     = Assistant
 lbl.caseNr        = Casenr.
+lbl.category      = Category
+lbl.comment       = Comment
 lbl.dateOfBirth   = Date of birth
 lbl.dateOfSurgery = Date of surgery
 lbl.diagnosis     = Diagnosis
+lbl.entry         = Entry
 lbl.firstName     = First name
 lbl.loggedInAs    = Logged in as
 lbl.nr            = Nr.
@@ -37,6 +40,7 @@ lbl.signUp        = Sign up
 lbl.surgeon       = Surgeon
 lbl.surgery       = Surgery
 lbl.surname       = Surname
+lbl.time          = Time
 lbl.username      = Username
 
 start.titel = IOMDO
