Verbesserungen IOMDocumentionView, neue lang_properties

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -35,6 +35,7 @@ lbl.firstName     = First name
 lbl.loggedInAs    = Logged in as
 lbl.nr            = Nr.
 lbl.password      = Password
+lbl.patientData   = Patient Data
 lbl.search        = Search
 lbl.signUp        = Sign up
 lbl.surgeon       = Surgeon
