--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -20,10 +20,13 @@ errorMsg.wrongCredentials = Deine Anmeldedaten entsprechen keinem Konto in unser
 hl.createNewAccount = Neuer Benutzer
 
 lbl.FID           = FID
+lbl.IOMrecording  = IOM Erfassung
 lbl.ISISDevice    = ISIS-Ger\u00E4t
 lbl.LogIn         = Anmelden
 lbl.PID           = PID
 lbl.assistant     = Assistent
+lbl.baselines     = Baselines
+lbl.caseData      = Falldaten
 lbl.caseNr        = Fallnr.
 lbl.category      = Kategorie
 lbl.comment       = Kommentar
@@ -36,6 +39,7 @@ lbl.loggedInAs    = Eingeloggt als
 lbl.nr            = Nr.
 lbl.password      = Passwort
 lbl.patientData   = Patientendaten
+lbl.save          = Speichern
 lbl.search        = Suche
 lbl.signUp        = Regristrieren
 lbl.surgeon       = Operateur
