--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -20,10 +20,13 @@ errorMsg.wrongCredentials = Your credentials do not correspond to any account in
 hl.createNewAccount = Create new User
 
 lbl.FID           = FID
+lbl.IOMrecording  = IOM Recording
 lbl.ISISDevice    = ISIS-device
 lbl.LogIn         = Log in
 lbl.PID           = PID
 lbl.assistant     = Assistant
+lbl.baselines     = Baselines
+lbl.caseData      = Case Data
 lbl.caseNr        = Casenr.
 lbl.category      = Category
 lbl.comment       = Comment
@@ -36,6 +39,7 @@ lbl.loggedInAs    = Logged in as
 lbl.nr            = Nr.
 lbl.password      = Password
 lbl.patientData   = Patient Data
+lbl.save          = Save
 lbl.search        = Search
 lbl.signUp        = Sign up
 lbl.surgeon       = Surgeon
