Language, ProtocolOverviewController and RDPatDatController

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -36,6 +36,7 @@ lbl.diagnosis     = Diagnosis
 lbl.entry         = Entry
 lbl.firstName     = First name
 lbl.loggedInAs    = Logged in as
+lbl.name          = Name
 lbl.nr            = Nr.
 lbl.password      = Password
 lbl.patientData   = Patient Data
