IOM Recording update

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -24,6 +24,7 @@ lbl.IOMrecording  = IOM Recording
 lbl.ISISDevice    = ISIS-device
 lbl.LogIn         = Log in
 lbl.PID           = PID
+lbl.age           = Age
 lbl.assistant     = Assistant
 lbl.baselines     = Baselines
 lbl.caseData      = Case Data
@@ -35,6 +36,7 @@ lbl.dateOfSurgery = Date of surgery
 lbl.diagnosis     = Diagnosis
 lbl.entry         = Entry
 lbl.firstName     = First name
+lbl.localization  = Localization
 lbl.loggedInAs    = Logged in as
 lbl.name          = Name
 lbl.nr            = Nr.
