--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -51,4 +51,6 @@ lbl.surname       = Surname
 lbl.time          = Time
 lbl.username      = Username
 
+rec.measurement = measurement
+
 start.titel = IOMDO
