IOMO 30, new icons

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -50,6 +50,7 @@ lbl.surgery       = Surgery
 lbl.surname       = Surname
 lbl.time          = Time
 lbl.username      = Username
+lbl.value         = Value
 
 rec.measurement = measurement
 
