--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -7,6 +7,7 @@ btn.logout           = logout
 btn.newProtocol      = Enter protocol
 btn.next             = Next
 btn.protocolOverview = Protocol overview
+btn.reset            = Reset
 btn.search           = search
 btn.settings         = Settings
 btn.signUp           = Sign Up
