--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -1,6 +1,7 @@
 
 btn.cancel           = Cancel
 btn.createQuery      = Create query
+btn.executeQuery     = execute
 btn.expandOntology   = Expand ontology
 btn.logIn            = Log in
 btn.logout           = logout
@@ -22,7 +23,7 @@ hl.createNewAccount = Create new User
 
 lbl.FID           = FID
 lbl.IOMrecording  = IOM Recording
-lbl.ISISDevice    = ISIS-device
+lbl.ISISDevice    = Device
 lbl.LogIn         = Log in
 lbl.PID           = PID
 lbl.age           = Age
@@ -43,6 +44,8 @@ lbl.name          = Name
 lbl.nr            = Nr.
 lbl.password      = Password
 lbl.patientData   = Patient Data
+lbl.query1        = Show all patients, their pathology, their postoperative outcome, and their respective DCS measurements including muscle
+lbl.query3        = Show all patients, their pathology, their postoperative outcome, and the lowest mapping threshold
 lbl.save          = Save
 lbl.search        = Search
 lbl.signUp        = Sign up
