CSS und Recording fxml

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -36,7 +36,7 @@ lbl.comment       = Kommentar
 lbl.dateOfBirth   = Geburtsdatum
 lbl.dateOfSurgery = Operationsdatum
 lbl.diagnosis     = Diagnose
-lbl.entry         = Eintrag
+lbl.entry         = Unterkategorie
 lbl.firstName     = Vorname
 lbl.localization  = Lokalisation
 lbl.loggedInAs    = Eingeloggt als
