--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -36,7 +36,7 @@ lbl.comment       = Comment
 lbl.dateOfBirth   = Date of birth
 lbl.dateOfSurgery = Date of surgery
 lbl.diagnosis     = Diagnosis
-lbl.entry         = Entry
+lbl.entry         = Subcategory
 lbl.firstName     = First name
 lbl.localization  = Localization
 lbl.loggedInAs    = Logged in as
