Added postoperative Dispositions, patient can be partially saved

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -42,7 +42,7 @@ lbl.localization  = Localization
 lbl.loggedInAs    = Logged in as
 lbl.name          = Name
 lbl.nr            = Nr.
-lbl.outcome       = Outcome
+lbl.outcome       = Postoperative complication
 lbl.password      = Password
 lbl.patientData   = Patient Data
 lbl.query1        = Show all patients, their pathology, their postoperative outcome, and their respective DCS measurements including muscle
