changed text of menu buttons

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -2,16 +2,17 @@
 btn.cancel           = Cancel
 btn.createQuery      = Create query
 btn.executeQuery     = execute
-btn.expandOntology   = Expand ontology
 btn.logIn            = Log in
 btn.logout           = logout
 btn.newProtocol      = Enter protocol
 btn.next             = Next
+btn.ontologyOverview = Ontology Overview
 btn.protocolOverview = Protocol overview
 btn.reset            = Reset
 btn.search           = search
 btn.settings         = Settings
 btn.signUp           = Sign Up
+btn.userManual       = User manual
 
 confirmationMsg.userCreated = User created successfully.
 
