settings and queries fixed

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -22,41 +22,42 @@ errorMsg.wrongCredentials = Your credentials do not correspond to any account in
 
 hl.createNewAccount = Create new User
 
-lbl.FID           = FID
-lbl.IOMrecording  = IOM Recording
-lbl.ISISDevice    = Device
-lbl.LogIn         = Log in
-lbl.PID           = PID
-lbl.age           = Age
-lbl.assistant     = Assistant
-lbl.baselines     = Baselines
-lbl.caseData      = Case Data
-lbl.caseNr        = Casenr.
-lbl.category      = Category
-lbl.comment       = Comment
-lbl.dateOfBirth   = Date of birth
-lbl.dateOfSurgery = Date of surgery
-lbl.diagnosis     = Diagnosis
-lbl.entry         = Subcategory
-lbl.firstName     = First name
-lbl.localization  = Localization
-lbl.loggedInAs    = Logged in as
-lbl.name          = Name
-lbl.nr            = Nr.
-lbl.outcome       = Postoperative complication
-lbl.password      = Password
-lbl.patientData   = Patient Data
-lbl.query1        = Show all patients, their pathology, their postoperative outcome, and their respective DCS measurements including muscle
-lbl.query3        = Show all patients, their pathology, their postoperative outcome, and the lowest mapping threshold
-lbl.save          = Save
-lbl.search        = Search
-lbl.signUp        = Sign up
-lbl.surgeon       = Surgeon
-lbl.surgery       = Surgery
-lbl.surname       = Surname
-lbl.time          = Time
-lbl.username      = Username
-lbl.value         = Value
+lbl.FID            = FID
+lbl.IOMrecording   = IOM Recording
+lbl.ISISDevice     = Device
+lbl.LogIn          = Log in
+lbl.PID            = PID
+lbl.age            = Age
+lbl.assistant      = Assistant
+lbl.baselines      = Baselines
+lbl.caseData       = Case Data
+lbl.caseNr         = Casenr.
+lbl.category       = Category
+lbl.comment        = Comment
+lbl.createOwnQuery = Write your own query:
+lbl.dateOfBirth    = Date of birth
+lbl.dateOfSurgery  = Date of surgery
+lbl.diagnosis      = Diagnosis
+lbl.entry          = Subcategory
+lbl.firstName      = First name
+lbl.localization   = Localization
+lbl.loggedInAs     = Logged in as
+lbl.name           = Name
+lbl.nr             = Nr.
+lbl.outcome        = Postoperative complication
+lbl.password       = Password
+lbl.patientData    = Patient Data
+lbl.query1         = Show all patients, their pathology, their postoperative outcome, and their respective DCS measurements including muscle
+lbl.query3         = Show all patients, their pathology, their postoperative outcome, and the lowest mapping threshold
+lbl.save           = Save
+lbl.search         = Search
+lbl.signUp         = Sign up
+lbl.surgeon        = Surgeon
+lbl.surgery        = Surgery
+lbl.surname        = Surname
+lbl.time           = Time
+lbl.username       = Username
+lbl.value          = Value
 
 rec.measurement = measurement
 
