--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -7,6 +7,8 @@ btn.logout           = logout
 btn.newProtocol      = Enter protocol
 btn.next             = Next
 btn.ontologyOverview = Ontology Overview
+btn.openOntology     = open IOMD-Ontology in prot\u00E9g\u00E9-web
+btn.openUserManual   = Open user manual
 btn.protocolOverview = Protocol overview
 btn.reset            = Reset
 btn.search           = search
