--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -36,7 +36,7 @@ lbl.caseData       = Case Data
 lbl.caseNr         = Casenr.
 lbl.category       = Category
 lbl.comment        = Comment
-lbl.createOwnQuery = Write your own query:
+lbl.createOwnQuery = Write your own SPARQL query:
 lbl.dateOfBirth    = Date of birth
 lbl.dateOfSurgery  = Date of surgery
 lbl.diagnosis      = Diagnosis
@@ -51,6 +51,7 @@ lbl.password       = Password
 lbl.patientData    = Patient Data
 lbl.query1         = Show all patients, their pathology, their postoperative outcome, and their respective DCS measurements including muscle
 lbl.query3         = Show all patients, their pathology, their postoperative outcome, and the lowest mapping threshold
+lbl.queryResults   = Query results
 lbl.save           = Save
 lbl.search         = Search
 lbl.signUp         = Sign up
