--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_de_CH.properties
@@ -1,7 +1,7 @@
 
 btn.cancel           = Abbrechen
 btn.createQuery      = Abfrage erstellen
-btn.executeQuery     = Ausf\u00FChren
+btn.executeQuery     = Ausf\u00FChren 
 btn.logIn            = Anmelden
 btn.logout           = abmelden
 btn.newProtocol      = Protokoll erfassen
@@ -36,7 +36,7 @@ lbl.caseData       = Falldaten
 lbl.caseNr         = Fallnr.
 lbl.category       = Kategorie
 lbl.comment        = Kommentar
-lbl.createOwnQuery = Eine eigene Abfrage erstellen:
+lbl.createOwnQuery = Abfrage in SPARQL erstellen:
 lbl.dateOfBirth    = Geburtsdatum
 lbl.dateOfSurgery  = Operationsdatum
 lbl.diagnosis      = Diagnose
@@ -50,7 +50,8 @@ lbl.outcome        = Postoperative Komplikation
 lbl.password       = Passwort
 lbl.patientData    = Patientendaten
 lbl.query1         = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die jeweiligen DCS Messungen inklusive Muskeln
-lbl.query3         = Zeige alle Patienten, ihre Pathologie, ihr postoperativer Outcome und die tiefste Mapping-Schwelle
+lbl.query3         = Zeige alle Patienten, ihre Diagnose, ihr postoperativer Outcome und die tiefste Mapping-Schwelle
+lbl.queryResults   = Abfrage-Ergebnisse
 lbl.save           = Speichern
 lbl.search         = Suche
 lbl.signUp         = Regristrieren
