Commenting Controller and css in NewAccount

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -16,6 +16,7 @@ btn.settings         = Settings
 btn.signUp           = Sign Up
 btn.userManual       = User manual
 
+confirmationMsg.succsess    = Succsess
 confirmationMsg.userCreated = User created successfully.
 
 errorMsg.emptyFileds      = Please fill in all fields.
