--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/lang_en.properties
@@ -67,4 +67,7 @@ rec.measurement = measurement
 
 start.titel = IOMDO
 
+text.available     = available
+text.bad           = Bad
+text.moderate      = moderate
 text.noDisposition = No disposition
